// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`基础信息测试-API配置项 1`] = `
Object {
  "x": 0,
  "y": 1,
}
`;

exports[`基础信息测试-默认渲染设置/边距 1`] = `
Object {
  "renderer": "svg",
}
`;

exports[`基础信息测试-默认配置项 1`] = `
Object {
  "showSplit": true,
}
`;

exports[`默认配置项测试 1`] = `
Object {
  "grid": Object {
    "bottom": "3%",
    "containLabel": true,
    "left": "3%",
    "right": "4%",
  },
  "series": Array [
    Object {
      "barGap": 0,
      "barWidth": 24.5,
      "data": Array [
        175,
        210,
        125,
        140,
        98,
        120,
        120,
      ],
      "itemStyle": Object {
        "color": LinearGradient {
          "colorStops": Array [
            Object {
              "color": "#0B4EC3",
              "offset": 0,
            },
            Object {
              "color": "#138CEB",
              "offset": 0.6,
            },
            Object {
              "color": "#17AAFE",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "name": "类型",
      "tooltip": Object {
        "show": false,
      },
      "type": "bar",
    },
    Object {
      "barGap": 0,
      "barWidth": 8,
      "data": Array [
        179.5,
        214.5,
        129.5,
        144.5,
        102.5,
        124.5,
        124.5,
      ],
      "itemStyle": Object {
        "color": LinearGradient {
          "colorStops": Array [
            Object {
              "color": "#09337C",
              "offset": 0,
            },
            Object {
              "color": "#0761C0",
              "offset": 0.6,
            },
            Object {
              "color": "#0575DE",
              "offset": 1,
            },
          ],
          "global": false,
          "type": "linear",
          "x": 0,
          "x2": 0,
          "y": 1,
          "y2": 0,
        },
      },
      "type": "bar",
    },
    Object {
      "data": Array [
        175,
        210,
        125,
        140,
        98,
        120,
        120,
      ],
      "itemStyle": Object {
        "borderColor": "#0571D5",
        "borderWidth": 1,
        "color": "#1779E0",
      },
      "label": Object {
        "color": "#ddd",
        "offset": Array [
          0,
          15,
        ],
        "position": "top",
        "rotate": -5,
        "show": true,
      },
      "symbol": "path://M 0,0 l 120,0 l -30,60 l -120,0 z",
      "symbolOffset": Array [
        "0",
        "-11",
      ],
      "symbolPosition": "end",
      "symbolRotate": -5,
      "symbolSize": Array [
        "30",
        "12",
      ],
      "tooltip": Object {
        "show": false,
      },
      "type": "pictorialBar",
      "z": 3,
    },
  ],
  "tooltip": Object {
    "axisPointer": Object {
      "type": "shadow",
    },
    "trigger": "axis",
  },
  "xAxis": Array [
    Object {
      "axisLabel": Object {
        "color": "#fff",
      },
      "axisLine": Object {
        "lineStyle": Object {
          "color": "#3eb2e8",
        },
      },
      "axisTick": Object {
        "show": false,
      },
      "data": Array [
        "Sun",
        "Mon",
        "Tue",
        "Wed",
        "Thu",
        "Fri",
        "Sat",
      ],
      "type": "category",
    },
  ],
  "yAxis": Array [
    Object {
      "axisLabel": Object {
        "color": "#ddd",
      },
      "axisLine": Object {
        "lineStyle": Object {
          "color": "#ddd",
        },
      },
      "axisTick": Object {
        "show": false,
      },
      "splitLine": Object {
        "lineStyle": Object {
          "color": "#4784e8",
          "type": "solid",
        },
        "show": true,
      },
      "type": "value",
    },
  ],
}
`;
